--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Potluck",
+  "name": "potluck",
   "version": "1.0.0",
   "description": "Recipe journaling and discovery app",
   "main": "server.js",
